--- a/Front End Assets/package.json
+++ b/Front End Assets/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-sass": "^2.2.0",
     "nunjucks": "^2.4.0"
