--- a/Front End Assets/package.json
+++ b/Front End Assets/package.json
@@ -14,6 +14,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-server-livereload": "^1.7.4",
     "run-sequence": "^1.1.5"
   },
   "scripts": {
